versioned_docs/version-8.x/pagination.md
<!-- # Database: Pagination -->
# Database: Pagination

- [Introduction](#introduction)
- [Basic Usage](#basic-usage)
    - [Paginating Query Builder Results](#paginating-query-builder-results)
    - [Paginating Eloquent Results](#paginating-eloquent-results)
    - [Cursor Pagination](#cursor-pagination)
    - [Manually Creating A Paginator](#manually-creating-a-paginator)
    - [Customizing Pagination URLs](#customizing-pagination-urls)
- [Displaying Pagination Results](#displaying-pagination-results)
    - [Adjusting The Pagination Link Window](#adjusting-the-pagination-link-window)
    - [Converting Results To JSON](#converting-results-to-json)
- [Customizing The Pagination View](#customizing-the-pagination-view)
    - [Using Bootstrap](#using-bootstrap)
- [Paginator and LengthAwarePaginator Instance Methods](#paginator-instance-methods)
- [Cursor Paginator Instance Methods](#cursor-paginator-instance-methods)

<a name="introduction"></a>
<!-- ## Introduction -->
## Introduction

<!-- In other frameworks, pagination can be very painful. We hope Laravel's approach to pagination will be a breath of fresh air. Laravel's paginator is integrated with the [query builder](/docs/8.x/queries) and [Eloquent ORM](/docs/8.x/eloquent) and provides convenient, easy-to-use pagination of database records with zero configuration. -->
다른 프레임워크들에서는 페이지네이션이 상당히 번거로울 수 있습니다. Laravel은 더 쉽고 편리한 페이지네이션 방식을 제공합니다. Laravel의 페이지네이터는 [query builder](/docs/8.x/queries)와 [Eloquent ORM](/docs/8.x/eloquent) 모두에 통합되어 있어, 별도의 설정 없이도 데이터베이스 레코드를 쉽게 페이지네이션할 수 있습니다.

<!-- By default, the HTML generated by the paginator is compatible with the [Tailwind CSS framework](https://tailwindcss.com/); however, Bootstrap pagination support is also available. -->
기본적으로, 페이지네이터가 생성하는 HTML은 [Tailwind CSS framework](https://tailwindcss.com/)와 호환됩니다. 또한 Bootstrap 기반의 페이지네이션 뷰도 지원됩니다.

<a name="tailwind-jit"></a>
<!-- #### Tailwind JIT -->
#### Tailwind JIT

<!-- If you are using Laravel's default Tailwind pagination views and the Tailwind JIT engine, you should ensure your application's `tailwind.config.js` file's `content` key references Laravel's pagination views so that their Tailwind classes are not purged: -->
Laravel의 기본 Tailwind 페이지네이션 뷰와 Tailwind JIT 엔진을 같이 사용하는 경우, 애플리케이션의 `tailwind.config.js` 파일의 `content` 설정에 Laravel의 페이지네이션 뷰 경로가 포함되어야 해당 뷰에 사용된 Tailwind 클래스가 제거되지 않습니다:

```js
content: [
    './resources/**/*.blade.php',
    './resources/**/*.js',
    './resources/**/*.vue',
    './vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php',
],
```

<a name="basic-usage"></a>
<!-- ## Basic Usage -->
## Basic Usage

<a name="paginating-query-builder-results"></a>
<!-- ### Paginating Query Builder Results -->
### Paginating Query Builder Results

<!-- There are several ways to paginate items. The simplest is by using the `paginate` method on the [query builder](/docs/8.x/queries) or an [Eloquent query](/docs/8.x/eloquent). The `paginate` method automatically takes care of setting the query's "limit" and "offset" based on the current page being viewed by the user. By default, the current page is detected by the value of the `page` query string argument on the HTTP request. This value is automatically detected by Laravel, and is also automatically inserted into links generated by the paginator. -->
아이템을 페이지네이션하는 방법에는 여러 가지가 있습니다. 가장 간단한 방법은 [query builder](/docs/8.x/queries)나 [Eloquent query](/docs/8.x/eloquent)에서 `paginate` 메서드를 사용하는 것입니다. `paginate` 메서드는 사용자가 보고 있는 현재 페이지를 기준으로 쿼리의 "limit"과 "offset"을 자동으로 설정해줍니다. 기본적으로, 현재 페이지는 HTTP 요청의 쿼리 스트링에서 `page` 인수의 값을 통해 감지합니다. 이 값은 Laravel에서 자동으로 감지하며, 페이지네이터가 생성하는 링크에도 자동으로 포함됩니다.

<!-- In this example, the only argument passed to the `paginate` method is the number of items you would like displayed "per page". In this case, let's specify that we would like to display `15` items per page: -->
아래 예시에서는, `paginate` 메서드에 페이지당 보여주고 싶은 수만 인수로 전달하면 됩니다. 여기에서는 한 페이지에 `15`개의 아이템을 보여주도록 지정합니다:

```
<?php

namespace App\Http\Controllers;

use App\Http\Controllers\Controller;
use Illuminate\Support\Facades\DB;

class UserController extends Controller
{
    /**
     * Show all application users.
     *
     * @return \Illuminate\Http\Response
     */
    public function index()
    {
        return view('user.index', [
            'users' => DB::table('users')->paginate(15)
        ]);
    }
}
```

<a name="simple-pagination"></a>
<!-- #### Simple Pagination -->
#### Simple Pagination

<!-- The `paginate` method counts the total number of records matched by the query before retrieving the records from the database. This is done so that the paginator knows how many pages of records there are in total. However, if you do not plan to show the total number of pages in your application's UI then the record count query is unnecessary. -->
`paginate` 메서드는 쿼리에서 전체 레코드 수를 먼저 카운트한 후, 실제 데이터를 데이터베이스에서 가져옵니다. 이렇게 전체 페이지 수를 알 수 있게 됩니다. 하지만, 만약 애플리케이션 UI에서 전체 페이지 수를 보여줄 계획이 없다면 전체 레코드 카운트는 불필요할 수 있습니다.

<!-- Therefore, if you only need to display simple "Next" and "Previous" links in your application's UI, you may use the `simplePaginate` method to perform a single, efficient query: -->
이런 경우, 단순히 "다음"과 "이전" 링크만 필요하다면, `simplePaginate` 메서드를 사용해 더 효율적으로 쿼리를 수행할 수 있습니다:

```
$users = DB::table('users')->simplePaginate(15);
```

<a name="paginating-eloquent-results"></a>
<!-- ### Paginating Eloquent Results -->
### Paginating Eloquent Results

<!-- You may also paginate [Eloquent](/docs/8.x/eloquent) queries. In this example, we will paginate the `App\Models\User` model and indicate that we plan to display 15 records per page. As you can see, the syntax is nearly identical to paginating query builder results: -->
[Eloquent](/docs/8.x/eloquent) 쿼리에 대해서도 페이지네이션을 적용할 수 있습니다. 아래 예시에서는 `App\Models\User` 모델에 대해 페이지당 15개의 레코드를 보여주도록 페이지네이션을 적용합니다. 쿼리 빌더에서 사용하는 방식과 거의 동일합니다:

```
use App\Models\User;

$users = User::paginate(15);
```

<!-- Of course, you may call the `paginate` method after setting other constraints on the query, such as `where` clauses: -->
또한, 쿼리에 `where` 조건과 같은 제약을 추가한 후에도 `paginate` 메서드를 사용할 수 있습니다:

```
$users = User::where('votes', '>', 100)->paginate(15);
```

<!-- You may also use the `simplePaginate` method when paginating Eloquent models: -->
Eloquent 모델에서도 마찬가지로 `simplePaginate` 메서드를 사용할 수 있습니다:

```
$users = User::where('votes', '>', 100)->simplePaginate(15);
```

<!-- Similarly, you may use the `cursorPaginate` method to cursor paginate Eloquent models: -->
그리고 Eloquent 모델에 대해 `cursorPaginate` 메서드를 사용할 수도 있습니다:

```
$users = User::where('votes', '>', 100)->cursorPaginate(15);
```

<a name="multiple-paginator-instances-per-page"></a>
<!-- #### Multiple Paginator Instances Per Page -->
#### Multiple Paginator Instances Per Page

<!-- Sometimes you may need to render two separate paginators on a single screen that is rendered by your application. However, if both paginator instances use the `page` query string parameter to store the current page, the two paginator's will conflict. To resolve this conflict, you may pass the name of the query string parameter you wish to use to store the paginator's current page via the third argument provided to the `paginate`, `simplePaginate`, and `cursorPaginate` methods: -->
때때로 하나의 화면에서 서로 다른 두 개의 페이지네이터를 동시에 렌더링해야 할 수 있습니다. 그러나 두 인스턴스 모두 `page` 쿼리 스트링 파라미터를 사용하면 충돌이 발생할 수 있습니다. 이럴 때는 `paginate`, `simplePaginate`, `cursorPaginate` 메서드의 세 번째 인수에 원하는 쿼리 파라미터 이름을 지정해 충돌을 방지할 수 있습니다:

```
use App\Models\User;

$users = User::where('votes', '>', 100)->paginate(
    $perPage = 15, $columns = ['*'], $pageName = 'users'
);
```

<a name="cursor-pagination"></a>
<!-- ### Cursor Pagination -->
### Cursor Pagination

<!-- While `paginate` and `simplePaginate` create queries using the SQL "offset" clause, cursor pagination works by constructing "where" clauses that compare the values of the ordered columns contained in the query, providing the most efficient database performance available amongst all of Laravel's pagination methods. This method of pagination is particularly well-suited for large data-sets and "infinite" scrolling user interfaces. -->
`paginate`와 `simplePaginate`는 SQL의 "offset" 구문을 사용해 쿼리를 생성하지만, 커서 페이지네이션은 쿼리에 정렬 컬럼 값을 활용해서 "where" 구문으로 조건을 걸어 데이터를 효율적으로 가져옵니다. 이 방식은 특히 대규모 데이터셋이나 "무한 스크롤" UI에서 성능이 매우 뛰어납니다.

<!-- Unlike offset based pagination, which includes a page number in the query string of the URLs generated by the paginator, cursor based pagination places a "cursor" string in the query string. The cursor is an encoded string containing the location that the next paginated query should start paginating and the direction that it should paginate: -->
오프셋 기반 페이지네이션은 URL 쿼리 스트링에 페이지 번호를 포함하지만, 커서 기반 페이지네이션은 쿼리 스트링에 "cursor"라는 문자열을 포함시킵니다. 커서는 다음 쿼리가 어디에서 시작할지, 어떤 방향으로 페이지를 넘길지에 대한 정보를 담고 있는 인코딩된 문자열입니다:

```nothing
http://localhost/users?cursor=eyJpZCI6MTUsIl9wb2ludHNUb05leHRJdGVtcyI6dHJ1ZX0
```

<!-- You may create a cursor based paginator instance via the `cursorPaginate` method offered by the query builder. This method returns an instance of `Illuminate\Pagination\CursorPaginator`: -->
쿼리 빌더의 `cursorPaginate` 메서드를 사용해 커서 기반 페이지네이터 인스턴스를 생성할 수 있습니다. 이 메서드는 `Illuminate\Pagination\CursorPaginator` 인스턴스를 반환합니다:

```
$users = DB::table('users')->orderBy('id')->cursorPaginate(15);
```

<!-- Once you have retrieved a cursor paginator instance, you may [display the pagination results](#displaying-pagination-results) as you typically would when using the `paginate` and `simplePaginate` methods. For more information on the instance methods offered by the cursor paginator, please consult the [cursor paginator instance method documentation](#cursor-paginator-instance-methods). -->
커서 페이지네이터 인스턴스를 얻은 후에는, `paginate`와 `simplePaginate` 메서드를 사용할 때와 마찬가지로 [display the pagination results](#displaying-pagination-results) 섹션에서 소개하는 것과 같은 방식으로 결과를 보여줄 수 있습니다. 커서 페이지네이터에서 제공하는 인스턴스 메서드에 대한 자세한 정보는 [cursor paginator instance method documentation](#cursor-paginator-instance-methods) 문서를 참고하세요.

> [!NOTE]
> 커서 페이지네이션을 사용하려면, 반드시 쿼리에 "order by" 구문이 포함되어야 합니다.

<a name="cursor-vs-offset-pagination"></a>
<!-- #### Cursor vs. Offset Pagination -->
#### Cursor vs. Offset Pagination

<!-- To illustrate the differences between offset pagination and cursor pagination, let's examine some example SQL queries. Both of the following queries will both display the "second page" of results for a `users` table ordered by `id`: -->
커서 페이지네이션과 오프셋 페이지네이션의 차이를 예시 SQL 쿼리를 통해 살펴보겠습니다. 아래 두 쿼리는 모두 `id` 컬럼으로 정렬된 `users` 테이블의 "두 번째 페이지" 결과를 가져옵니다:

```sql
# Offset Pagination...
select * from users order by id asc limit 15 offset 15;

# Cursor Pagination...
select * from users where id > 15 order by id asc limit 15;
```

<!-- The cursor pagination query offers the following advantages over offset pagination: -->
커서 페이지네이션 쿼리는 오프셋 페이지네이션에 비해 다음과 같은 장점이 있습니다:

<!--
- For large data-sets, cursor pagination will offer better performance if the "order by" columns are indexed. This is because the "offset" clause scans through all previously matched data.
- For data-sets with frequent writes, offset pagination may skip records or show duplicates if results have been recently added to or deleted from the page a user is currently viewing.
-->
- 대규모 데이터셋에서, 정렬 기준 컬럼에 인덱스가 있다면 커서 페이지네이션이 더 나은 성능을 보입니다. "offset" 구문은 이전에 일치한 모든 데이터를 스캔하기 때문입니다.
- 데이터셋에 삽입/삭제가 잦은 경우, 오프셋 페이지네이션은 사용자가 보고 있는 페이지에서 레코드를 건너뛰거나 중복으로 보이게 할 수 있습니다.

<!-- However, cursor pagination has the following limitations: -->
단, 커서 페이지네이션에는 다음과 같은 한계가 있습니다:

<!--
- Like `simplePaginate`, cursor pagination can only be used to display "Next" and "Previous" links and does not support generating links with page numbers.
- It requires that the ordering is based on at least one unique column or a combination of columns that are unique. Columns with `null` values are not supported.
- Query expressions in "order by" clauses are supported only if they are aliased and added to the "select" clause as well.
-->
- `simplePaginate`처럼, 커서 페이지네이션은 "다음"과 "이전" 링크만 지원하고, 페이지 번호가 있는 링크는 지원하지 않습니다.
- 정렬 기준이 적어도 하나의 유니크 컬럼(또는 유니크 컬럼들의 조합)에 기반해야 합니다. `null` 값이 포함된 컬럼은 사용할 수 없습니다.
- "order by"에 사용된 쿼리 표현식은 반드시 alias로 지정해서 "select" 구문에도 추가되어야 지원됩니다.

<a name="manually-creating-a-paginator"></a>
<!-- ### Manually Creating A Paginator -->
### Manually Creating A Paginator

<!-- Sometimes you may wish to create a pagination instance manually, passing it an array of items that you already have in memory. You may do so by creating either an `Illuminate\Pagination\Paginator`, `Illuminate\Pagination\LengthAwarePaginator` or `Illuminate\Pagination\CursorPaginator` instance, depending on your needs. -->
이미 메모리 상에 존재하는 배열을 페이지네이션할 필요가 있을 때, 페이지네이션 인스턴스를 직접 생성할 수 있습니다. 필요에 따라 `Illuminate\Pagination\Paginator`, `Illuminate\Pagination\LengthAwarePaginator`, `Illuminate\Pagination\CursorPaginator` 중 하나를 사용할 수 있습니다.

<!-- The `Paginator` and `CursorPaginator` classes do not need to know the total number of items in the result set; however, because of this, these classes do not have methods for retrieving the index of the last page. The `LengthAwarePaginator` accepts almost the same arguments as the `Paginator`; however, it requires a count of the total number of items in the result set. -->
`Paginator`와 `CursorPaginator` 클래스는 전체 결과 개수를 알 필요는 없습니다. 대신, 이 클래스들은 마지막 페이지의 인덱스를 조회하는 메서드를 제공하지 않습니다. 반면, `LengthAwarePaginator`는 `Paginator`와 거의 동일한 인수를 받지만, 전체 결과 개수도 인수로 받아야 합니다.

<!-- In other words, the `Paginator` corresponds to the `simplePaginate` method on the query builder, the `CursorPaginator` corresponds to the `cursorPaginate` method, and the `LengthAwarePaginator` corresponds to the `paginate` method. -->
정리하면, `Paginator`는 쿼리 빌더의 `simplePaginate`와, `CursorPaginator`는 `cursorPaginate`와, `LengthAwarePaginator`는 `paginate`와 각각 대응됩니다.

> [!NOTE]
> 페이지네이터 인스턴스를 수동으로 생성할 때, 넘겨주는 배열을 직접 "슬라이스(slice)"해주어야 합니다. 방법을 잘 모르겠다면 [array_slice](https://secure.php.net/manual/en/function.array-slice.php) PHP 함수를 참고하세요.

<a name="customizing-pagination-urls"></a>
<!-- ### Customizing Pagination URLs -->
### Customizing Pagination URLs

<!-- By default, links generated by the paginator will match the current request's URI. However, the paginator's `withPath` method allows you to customize the URI used by the paginator when generating links. For example, if you want the paginator to generate links like `http://example.com/admin/users?page=N`, you should pass `/admin/users` to the `withPath` method: -->
기본적으로 페이지네이터가 생성하는 링크는 현재 요청의 URI를 기반으로 합니다. 하지만, 페이지네이터의 `withPath` 메서드를 이용하면 링크가 생성될 때 사용할 URI를 원하는 대로 지정할 수 있습니다. 예를 들어, `http://example.com/admin/users?page=N`과 같은 링크를 만들고 싶다면 `withPath` 메서드에 `/admin/users`를 전달하세요:

```
use App\Models\User;

Route::get('/users', function () {
    $users = User::paginate(15);

    $users->withPath('/admin/users');

    //
});
```

<a name="appending-query-string-values"></a>
<!-- #### Appending Query String Values -->
#### Appending Query String Values

<!-- You may append to the query string of pagination links using the `appends` method. For example, to append `sort=votes` to each pagination link, you should make the following call to `appends`: -->
`appends` 메서드를 사용하면, 페이지네이션 링크의 쿼리 스트링에 원하는 값을 추가할 수 있습니다. 예를 들어, 각 페이지네이션 링크에 `sort=votes`를 추가하려면 아래와 같이 `appends`를 호출합니다:

```
use App\Models\User;

Route::get('/users', function () {
    $users = User::paginate(15);

    $users->appends(['sort' => 'votes']);

    //
});
```

<!-- You may use the `withQueryString` method if you would like to append all of the current request's query string values to the pagination links: -->
현재 요청의 모든 쿼리 스트링 값을 페이지네이션 링크에 추가하려면 `withQueryString` 메서드를 사용할 수 있습니다:

```
$users = User::paginate(15)->withQueryString();
```

<a name="appending-hash-fragments"></a>
<!-- #### Appending Hash Fragments -->
#### Appending Hash Fragments

<!-- If you need to append a "hash fragment" to URLs generated by the paginator, you may use the `fragment` method. For example, to append `#users` to the end of each pagination link, you should invoke the `fragment` method like so: -->
페이지네이터가 생성한 URL에 "해시 프래그먼트"를 추가할 필요가 있다면, `fragment` 메서드를 사용할 수 있습니다. 예를 들어, 각 페이지네이션 링크 마지막에 `#users`를 추가하려면 다음과 같이 `fragment` 메서드를 호출하면 됩니다:

```
$users = User::paginate(15)->fragment('users');
```

<a name="displaying-pagination-results"></a>
<!-- ## Displaying Pagination Results -->
## Displaying Pagination Results

<!-- When calling the `paginate` method, you will receive an instance of `Illuminate\Pagination\LengthAwarePaginator`, while calling the `simplePaginate` method returns an instance of `Illuminate\Pagination\Paginator`. And, finally, calling the `cursorPaginate` method returns an instance of `Illuminate\Pagination\CursorPaginator`. -->
`paginate` 메서드를 사용하면 `Illuminate\Pagination\LengthAwarePaginator` 인스턴스가, `simplePaginate` 메서드를 사용하면 `Illuminate\Pagination\Paginator` 인스턴스가, `cursorPaginate` 메서드를 사용하면 `Illuminate\Pagination\CursorPaginator` 인스턴스가 반환됩니다.

<!-- These objects provide several methods that describe the result set. In addition to these helpers methods, the paginator instances are iterators and may be looped as an array. So, once you have retrieved the results, you may display the results and render the page links using [Blade](/docs/8.x/blade): -->
이 객체들은 각각 결과셋과 관련된 다양한 메서드를 제공합니다. 이외에도, 배열처럼 반복(loop)할 수 있으므로 데이터를 바로 출력하거나, [Blade](/docs/8.x/blade)를 이용해 쉽게 렌더링할 수 있습니다:

```html
<div class="container">
    @foreach ($users as $user)
        {{ $user->name }}
    @endforeach
</div>

{{ $users->links() }}
```

<!-- The `links` method will render the links to the rest of the pages in the result set. Each of these links will already contain the proper `page` query string variable. Remember, the HTML generated by the `links` method is compatible with the [Tailwind CSS framework](https://tailwindcss.com). -->
`links` 메서드는 결과셋의 나머지 페이지로 이동할 수 있는 링크들을 렌더링합니다. 각 링크에는 이미 올바른 `page` 쿼리 스트링 변수가 포함되어 있습니다. 참고로, `links` 메서드가 생성하는 HTML은 [Tailwind CSS framework](https://tailwindcss.com)와 호환됩니다.

<a name="adjusting-the-pagination-link-window"></a>
<!-- ### Adjusting The Pagination Link Window -->
### Adjusting The Pagination Link Window

<!-- When the paginator displays pagination links, the current page number is displayed as well as links for the three pages before and after the current page. Using the `onEachSide` method, you may control how many additional links are displayed on each side of the current page within the middle, sliding window of links generated by the paginator: -->
페이지네이터가 렌더링하는 페이지네이션 링크는 현재 페이지 번호와, 그 앞뒤로 기본 3개씩의 페이지 링크를 보여줍니다. `onEachSide` 메서드를 사용하면, 현재 페이지 주변에 몇 개의 추가 링크를 표시할지 조정할 수 있습니다:

```
{{ $users->onEachSide(5)->links() }}
```

<a name="converting-results-to-json"></a>
<!-- ### Converting Results To JSON -->
### Converting Results To JSON

<!-- The Laravel paginator classes implement the `Illuminate\Contracts\Support\Jsonable` Interface contract and expose the `toJson` method, so it's very easy to convert your pagination results to JSON. You may also convert a paginator instance to JSON by returning it from a route or controller action: -->
Laravel의 페이지네이터 클래스들은 `Illuminate\Contracts\Support\Jsonable` 인터페이스를 구현하고 있어 `toJson` 메서드를 사용할 수 있습니다. 페이지네이션 결과를 JSON으로 변환하는 것이 매우 쉽습니다. 또한 페이지네이터 인스턴스를 라우트나 컨트롤러 액션에서 리턴하면, 자동으로 JSON으로 변환됩니다:

```
use App\Models\User;

Route::get('/users', function () {
    return User::paginate();
});
```

<!-- The JSON from the paginator will include meta information such as `total`, `current_page`, `last_page`, and more. The result records are available via the `data` key in the JSON array. Here is an example of the JSON created by returning a paginator instance from a route: -->
페이지네이터가 생성하는 JSON에는 `total`, `current_page`, `last_page` 등 다양한 메타 정보가 포함됩니다. 실제 레코드들은 JSON 배열의 `data` 키를 통해 사용할 수 있습니다. 아래는 라우트에서 페이지네이터 인스턴스를 그대로 반환했을 때 생성되는 JSON 예시입니다:

```
{
   "total": 50,
   "per_page": 15,
   "current_page": 1,
   "last_page": 4,
   "first_page_url": "http://laravel.app?page=1",
   "last_page_url": "http://laravel.app?page=4",
   "next_page_url": "http://laravel.app?page=2",
   "prev_page_url": null,
   "path": "http://laravel.app",
   "from": 1,
   "to": 15,
   "data":[
        {
            // Record...
        },
        {
            // Record...
        }
   ]
}
```

<a name="customizing-the-pagination-view"></a>
<!-- ## Customizing The Pagination View -->
## Customizing The Pagination View

<!-- By default, the views rendered to display the pagination links are compatible with the [Tailwind CSS](https://tailwindcss.com) framework. However, if you are not using Tailwind, you are free to define your own views to render these links. When calling the `links` method on a paginator instance, you may pass the view name as the first argument to the method: -->
기본적으로, 페이지네이션 링크를 렌더링하는 뷰는 [Tailwind CSS](https://tailwindcss.com) 프레임워크와 호환되게 되어 있습니다. Tailwind를 사용하지 않는다면 원하는 뷰 파일을 만들어 링크 렌더링 방식을 직접 정의할 수도 있습니다. 페이지네이터 인스턴스에서 `links` 메서드 호출 시 첫 번째 인수로 뷰 이름을 전달하면 적용됩니다:

```
{{ $paginator->links('view.name') }}

// Passing additional data to the view...
{{ $paginator->links('view.name', ['foo' => 'bar']) }}
```

<!-- However, the easiest way to customize the pagination views is by exporting them to your `resources/views/vendor` directory using the `vendor:publish` command: -->
하지만 가장 쉬운 커스터마이징 방법은 아래 `vendor:publish` 명령어로 뷰 파일을 내 애플리케이션의 `resources/views/vendor` 디렉토리로 내보내 직접 수정하는 것입니다:

```
php artisan vendor:publish --tag=laravel-pagination
```

<!-- This command will place the views in your application's `resources/views/vendor/pagination` directory. The `tailwind.blade.php` file within this directory corresponds to the default pagination view. You may edit this file to modify the pagination HTML. -->
이 명령을 실행하면, 페이지네이션 뷰가 `resources/views/vendor/pagination` 폴더에 복사됩니다. 이 디렉토리의 `tailwind.blade.php` 파일이 기본 페이지네이션 뷰이므로, 이 파일을 수정하면 원하는 HTML로 커스터마이징할 수 있습니다.

<!-- If you would like to designate a different file as the default pagination view, you may invoke the paginator's `defaultView` and `defaultSimpleView` methods within the `boot` method of your `App\Providers\AppServiceProvider` class: -->
기본 페이지네이션 뷰를 다른 파일로 변경하려면, `App\Providers\AppServiceProvider` 클래스의 `boot` 메서드에서 페이지네이터의 `defaultView`와 `defaultSimpleView` 메서드를 호출하세요:

```
<?php

namespace App\Providers;

use Illuminate\Pagination\Paginator;
use Illuminate\Support\Facades\Blade;
use Illuminate\Support\ServiceProvider;

class AppServiceProvider extends ServiceProvider
{
    /**
     * Bootstrap any application services.
     *
     * @return void
     */
    public function boot()
    {
        Paginator::defaultView('view-name');

        Paginator::defaultSimpleView('view-name');
    }
}
```

<a name="using-bootstrap"></a>
<!-- ### Using Bootstrap -->
### Using Bootstrap

<!-- Laravel includes pagination views built using [Bootstrap CSS](https://getbootstrap.com/). To use these views instead of the default Tailwind views, you may call the paginator's `useBootstrap` method within the `boot` method of your `App\Providers\AppServiceProvider` class: -->
Laravel에는 [Bootstrap CSS](https://getbootstrap.com/)를 사용해 만들어진 페이지네이션 뷰도 기본 포함되어 있습니다. Tailwind가 아닌 Bootstrap 기반 뷰를 사용하려면, 역시 `App\Providers\AppServiceProvider` 클래스의 `boot` 메서드에서 페이지네이터의 `useBootstrap` 메서드를 호출하세요:

```
use Illuminate\Pagination\Paginator;

/**
 * Bootstrap any application services.
 *
 * @return void
 */
public function boot()
{
    Paginator::useBootstrap();
}
```

<a name="paginator-instance-methods"></a>
<!-- ## Paginator / LengthAwarePaginator Instance Methods -->
## Paginator / LengthAwarePaginator Instance Methods

<!-- Each paginator instance provides additional pagination information via the following methods: -->
각 페이지네이터 인스턴스는 아래 메서드들을 통해 추가적인 페이지네이션 정보를 제공합니다:

<!--
Method  |  Description
-------  |  -----------
`$paginator->count()`  |  Get the number of items for the current page.
`$paginator->currentPage()`  |  Get the current page number.
`$paginator->firstItem()`  |  Get the result number of the first item in the results.
`$paginator->getOptions()`  |  Get the paginator options.
`$paginator->getUrlRange($start, $end)`  |  Create a range of pagination URLs.
`$paginator->hasPages()`  |  Determine if there are enough items to split into multiple pages.
`$paginator->hasMorePages()`  |  Determine if there are more items in the data store.
`$paginator->items()`  |  Get the items for the current page.
`$paginator->lastItem()`  |  Get the result number of the last item in the results.
`$paginator->lastPage()`  |  Get the page number of the last available page. (Not available when using `simplePaginate`).
`$paginator->nextPageUrl()`  |  Get the URL for the next page.
`$paginator->onFirstPage()`  |  Determine if the paginator is on the first page.
`$paginator->perPage()`  |  The number of items to be shown per page.
`$paginator->previousPageUrl()`  |  Get the URL for the previous page.
`$paginator->total()`  |  Determine the total number of matching items in the data store. (Not available when using `simplePaginate`).
`$paginator->url($page)`  |  Get the URL for a given page number.
`$paginator->getPageName()`  |  Get the query string variable used to store the page.
`$paginator->setPageName($name)`  |  Set the query string variable used to store the page.
-->
메서드  |  설명
-------  |  -----------
`$paginator->count()`  |  현재 페이지에 포함된 아이템 수를 가져옵니다.
`$paginator->currentPage()`  |  현재 페이지 번호를 가져옵니다.
`$paginator->firstItem()`  |  결과 중 첫 번째 아이템의 번호를 가져옵니다.
`$paginator->getOptions()`  |  페이지네이터 옵션 값을 가져옵니다.
`$paginator->getUrlRange($start, $end)`  |  지정한 범위의 페이지네이션 URL을 생성합니다.
`$paginator->hasPages()`  |  여러 페이지로 나눌 수 있는 충분한 아이템이 있는지 확인합니다.
`$paginator->hasMorePages()`  |  데이터 저장소에 다음 페이지가 존재하는지 확인합니다.
`$paginator->items()`  |  현재 페이지의 아이템들을 가져옵니다.
`$paginator->lastItem()`  |  결과 중 마지막 아이템의 번호를 가져옵니다.
`$paginator->lastPage()`  |  마지막 페이지의 페이지 번호를 가져옵니다. (`simplePaginate`에서는 사용할 수 없습니다.)
`$paginator->nextPageUrl()`  |  다음 페이지로 이동하는 URL을 가져옵니다.
`$paginator->onFirstPage()`  |  현재 페이지가 첫 번째 페이지인지 확인합니다.
`$paginator->perPage()`  |  한 페이지에 표시할 아이템 수를 가져옵니다.
`$paginator->previousPageUrl()`  |  이전 페이지로 이동하는 URL을 가져옵니다.
`$paginator->total()`  |  데이터 저장소에서 일치하는 전체 아이템 수를 가져옵니다. (`simplePaginate`에서는 사용할 수 없습니다.)
`$paginator->url($page)`  |  지정한 페이지 번호에 대한 URL을 가져옵니다.
`$paginator->getPageName()`  |  페이지 정보를 저장하는 쿼리 스트링 변수명을 가져옵니다.
`$paginator->setPageName($name)`  |  페이지 정보를 저장할 쿼리 스트링 변수명을 설정합니다.

<a name="cursor-paginator-instance-methods"></a>
<!-- ## Cursor Paginator Instance Methods -->
## Cursor Paginator Instance Methods

<!-- Each cursor paginator instance provides additional pagination information via the following methods: -->
각 커서 페이지네이터 인스턴스는 다음과 같은 추가 메서드를 제공합니다:

<!--
Method  |  Description
-------  |  -----------
`$paginator->count()`  |  Get the number of items for the current page.
`$paginator->cursor()`  |  Get the current cursor instance.
`$paginator->getOptions()`  |  Get the paginator options.
`$paginator->hasPages()`  |  Determine if there are enough items to split into multiple pages.
`$paginator->hasMorePages()`  |  Determine if there are more items in the data store.
`$paginator->getCursorName()`  |  Get the query string variable used to store the cursor.
`$paginator->items()`  |  Get the items for the current page.
`$paginator->nextCursor()`  |  Get the cursor instance for the next set of items.
`$paginator->nextPageUrl()`  |  Get the URL for the next page.
`$paginator->onFirstPage()`  |  Determine if the paginator is on the first page.
`$paginator->perPage()`  |  The number of items to be shown per page.
`$paginator->previousCursor()`  |  Get the cursor instance for the previous set of items.
`$paginator->previousPageUrl()`  |  Get the URL for the previous page.
`$paginator->setCursorName()`  |  Set the query string variable used to store the cursor.
`$paginator->url($cursor)`  |  Get the URL for a given cursor instance.
-->
메서드  |  설명
-------  |  -----------
`$paginator->count()`  |  현재 페이지에 포함된 아이템 수를 가져옵니다.
`$paginator->cursor()`  |  현재 커서 인스턴스를 가져옵니다.
`$paginator->getOptions()`  |  페이지네이터 옵션 값을 가져옵니다.
`$paginator->hasPages()`  |  여러 페이지로 나눌 수 있는 충분한 아이템이 있는지 확인합니다.
`$paginator->hasMorePages()`  |  데이터 저장소에 다음 페이지가 존재하는지 확인합니다.
`$paginator->getCursorName()`  |  커서를 저장하는 쿼리 스트링 변수명을 가져옵니다.
`$paginator->items()`  |  현재 페이지의 아이템들을 가져옵니다.
`$paginator->nextCursor()`  |  다음 아이템 셋에 대한 커서 인스턴스를 가져옵니다.
`$paginator->nextPageUrl()`  |  다음 페이지로 이동하는 URL을 가져옵니다.
`$paginator->onFirstPage()`  |  현재 페이지가 첫 번째 페이지인지 확인합니다.
`$paginator->perPage()`  |  한 페이지에 표시할 아이템 수를 가져옵니다.
`$paginator->previousCursor()`  |  이전 아이템 셋에 대한 커서 인스턴스를 가져옵니다.
`$paginator->previousPageUrl()`  |  이전 페이지로 이동하는 URL을 가져옵니다.
`$paginator->setCursorName()`  |  커서를 저장할 쿼리 스트링 변수명을 설정합니다.
`$paginator->url($cursor)`  |  지정한 커서 인스턴스에 대한 URL을 가져옵니다.
