versioned_docs/version-9.x/pagination.md
<!-- # Database: Pagination -->
# Database: Pagination

- [Introduction](#introduction)
- [Basic Usage](#basic-usage)
    - [Paginating Query Builder Results](#paginating-query-builder-results)
    - [Paginating Eloquent Results](#paginating-eloquent-results)
    - [Cursor Pagination](#cursor-pagination)
    - [Manually Creating A Paginator](#manually-creating-a-paginator)
    - [Customizing Pagination URLs](#customizing-pagination-urls)
- [Displaying Pagination Results](#displaying-pagination-results)
    - [Adjusting The Pagination Link Window](#adjusting-the-pagination-link-window)
    - [Converting Results To JSON](#converting-results-to-json)
- [Customizing The Pagination View](#customizing-the-pagination-view)
    - [Using Bootstrap](#using-bootstrap)
- [Paginator and LengthAwarePaginator Instance Methods](#paginator-instance-methods)
- [Cursor Paginator Instance Methods](#cursor-paginator-instance-methods)

<a name="introduction"></a>
<!-- ## Introduction -->
## Introduction

<!-- In other frameworks, pagination can be very painful. We hope Laravel's approach to pagination will be a breath of fresh air. Laravel's paginator is integrated with the [query builder](/docs/9.x/queries) and [Eloquent ORM](/docs/9.x/eloquent) and provides convenient, easy-to-use pagination of database records with zero configuration. -->
다른 프레임워크에서는 페이지네이션 기능을 구현하는 것이 매우 번거로울 수 있습니다. Laravel에서는 페이지네이션이 더 쉽고 편리하게 느껴지시길 바랍니다. Laravel의 페이지네이터는 [query builder](/docs/9.x/queries) 및 [Eloquent ORM](/docs/9.x/eloquent)에 통합되어 있으며, 별도의 설정 없이도 손쉽게 데이터베이스 레코드를 페이지 단위로 나눠 보여줄 수 있습니다.

<!-- By default, the HTML generated by the paginator is compatible with the [Tailwind CSS framework](https://tailwindcss.com/); however, Bootstrap pagination support is also available. -->
기본적으로 페이지네이터가 생성하는 HTML은 [Tailwind CSS framework](https://tailwindcss.com/)와 호환됩니다. 다만, Bootstrap 기반의 페이지네이션도 지원합니다.

<a name="tailwind-jit"></a>
<!-- #### Tailwind JIT -->
#### Tailwind JIT

<!-- If you are using Laravel's default Tailwind pagination views and the Tailwind JIT engine, you should ensure your application's `tailwind.config.js` file's `content` key references Laravel's pagination views so that their Tailwind classes are not purged: -->
Laravel의 기본 Tailwind 페이지네이션 뷰와 Tailwind의 JIT(Just-In-Time) 엔진을 함께 사용하는 경우, Tailwind 클래스가 삭제되지 않도록 애플리케이션의 `tailwind.config.js` 파일의 `content` 키에 Laravel의 페이지네이션 뷰 경로가 반드시 포함되어 있는지 확인해야 합니다.

```js
content: [
    './resources/**/*.blade.php',
    './resources/**/*.js',
    './resources/**/*.vue',
    './vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php',
],
```

<a name="basic-usage"></a>
<!-- ## Basic Usage -->
## Basic Usage

<a name="paginating-query-builder-results"></a>
<!-- ### Paginating Query Builder Results -->
### Paginating Query Builder Results

<!-- There are several ways to paginate items. The simplest is by using the `paginate` method on the [query builder](/docs/9.x/queries) or an [Eloquent query](/docs/9.x/eloquent). The `paginate` method automatically takes care of setting the query's "limit" and "offset" based on the current page being viewed by the user. By default, the current page is detected by the value of the `page` query string argument on the HTTP request. This value is automatically detected by Laravel, and is also automatically inserted into links generated by the paginator. -->
아이템을 페이지네이션하는 방법에는 여러 가지가 있습니다. 가장 간단한 방법은 [query builder](/docs/9.x/queries)나 [Eloquent query](/docs/9.x/eloquent)에 `paginate` 메서드를 사용하는 것입니다. `paginate` 메서드는 사용자가 보고 있는 현재 페이지 정보에 따라 쿼리의 "limit" 및 "offset"을 자동으로 설정합니다. 기본적으로 현재 페이지는 HTTP 요청의 쿼리스트링에서 `page` 인수의 값으로 감지됩니다. 이 값은 Laravel에서 자동으로 감지하며, 페이지네이터가 생성하는 링크에도 자동으로 삽입됩니다.

<!-- In this example, the only argument passed to the `paginate` method is the number of items you would like displayed "per page". In this case, let's specify that we would like to display `15` items per page: -->
아래 예시에서는 `paginate` 메서드에 "한 페이지당 몇 개의 항목을 표시할지"를 나타내는 인수만 전달합니다. 여기서는 한 페이지에 `15`개 항목을 보여주도록 지정했습니다.

```
<?php

namespace App\Http\Controllers;

use App\Http\Controllers\Controller;
use Illuminate\Support\Facades\DB;

class UserController extends Controller
{
    /**
     * Show all application users.
     *
     * @return \Illuminate\Http\Response
     */
    public function index()
    {
        return view('user.index', [
            'users' => DB::table('users')->paginate(15)
        ]);
    }
}
```

<a name="simple-pagination"></a>
<!-- #### Simple Pagination -->
#### Simple Pagination

<!-- The `paginate` method counts the total number of records matched by the query before retrieving the records from the database. This is done so that the paginator knows how many pages of records there are in total. However, if you do not plan to show the total number of pages in your application's UI then the record count query is unnecessary. -->
`paginate` 메서드는 데이터베이스에 쿼리를 실행하기 전에, 조건에 일치하는 전체 레코드 개수를 먼저 계산합니다. 이렇게 하면 전체 페이지 수를 알 수 있습니다. 하지만, 만약 UI에서 전체 페이지 수를 보여줄 필요가 없다면, 이 추가 쿼리는 불필요할 수 있습니다.

<!-- Therefore, if you only need to display simple "Next" and "Previous" links in your application's UI, you may use the `simplePaginate` method to perform a single, efficient query: -->
따라서 애플리케이션의 UI에 단순히 "다음"과 "이전" 링크만 표시하면 된다면, 보다 효율적인 단일 쿼리를 수행하는 `simplePaginate` 메서드를 사용할 수 있습니다.

```
$users = DB::table('users')->simplePaginate(15);
```

<a name="paginating-eloquent-results"></a>
<!-- ### Paginating Eloquent Results -->
### Paginating Eloquent Results

<!-- You may also paginate [Eloquent](/docs/9.x/eloquent) queries. In this example, we will paginate the `App\Models\User` model and indicate that we plan to display 15 records per page. As you can see, the syntax is nearly identical to paginating query builder results: -->
[Eloquent](/docs/9.x/eloquent) 쿼리도 같은 방식으로 페이지네이션할 수 있습니다. 아래 예시에서는 `App\Models\User` 모델을 한 페이지에 15개씩, 페이지네이션하여 보여줍니다. 쿼리 빌더로 페이지네이션하는 것과 거의 동일한 문법을 따릅니다.

```
use App\Models\User;

$users = User::paginate(15);
```

<!-- Of course, you may call the `paginate` method after setting other constraints on the query, such as `where` clauses: -->
물론, 쿼리에 `where` 등 다른 조건을 추가한 뒤에 `paginate` 메서드를 호출할 수도 있습니다.

```
$users = User::where('votes', '>', 100)->paginate(15);
```

<!-- You may also use the `simplePaginate` method when paginating Eloquent models: -->
Eloquent 모델을 페이지네이션할 때도 `simplePaginate` 메서드를 사용할 수 있습니다.

```
$users = User::where('votes', '>', 100)->simplePaginate(15);
```

<!-- Similarly, you may use the `cursorPaginate` method to cursor paginate Eloquent models: -->
마찬가지로, `cursorPaginate` 메서드를 사용해 Eloquent 모델에 커서 페이지네이션을 적용할 수도 있습니다.

```
$users = User::where('votes', '>', 100)->cursorPaginate(15);
```

<a name="multiple-paginator-instances-per-page"></a>
<!-- #### Multiple Paginator Instances Per Page -->
#### Multiple Paginator Instances Per Page

<!-- Sometimes you may need to render two separate paginators on a single screen that is rendered by your application. However, if both paginator instances use the `page` query string parameter to store the current page, the two paginator's will conflict. To resolve this conflict, you may pass the name of the query string parameter you wish to use to store the paginator's current page via the third argument provided to the `paginate`, `simplePaginate`, and `cursorPaginate` methods: -->
때로는 하나의 화면에서 서로 다른 두 개의 페이지네이션을 동시에 표시해야 할 수 있습니다. 이때 두 페이지네이터가 모두 `page` 쿼리스트링 파라미터를 사용한다면 충돌이 발생합니다. 이러한 상황에서는 `paginate`, `simplePaginate`, `cursorPaginate` 메서드의 세 번째 인수로 각 페이지네이터가 사용할 쿼리스트링 파라미터 이름을 지정해 충돌을 방지할 수 있습니다.

```
use App\Models\User;

$users = User::where('votes', '>', 100)->paginate(
    $perPage = 15, $columns = ['*'], $pageName = 'users'
);
```

<a name="cursor-pagination"></a>
<!-- ### Cursor Pagination -->
### Cursor Pagination

<!-- While `paginate` and `simplePaginate` create queries using the SQL "offset" clause, cursor pagination works by constructing "where" clauses that compare the values of the ordered columns contained in the query, providing the most efficient database performance available amongst all of Laravel's pagination methods. This method of pagination is particularly well-suited for large data-sets and "infinite" scrolling user interfaces. -->
`paginate`와 `simplePaginate`는 SQL의 "offset" 절을 사용하는 반면, 커서 페이지네이션은 쿼리에서 정렬된 컬럼의 값들을 반복적으로 비교하는 "where" 절을 만들어 데이터베이스 효율을 극대화합니다. 커서 페이지네이션은 특히 대용량 데이터셋이나 "무한 스크롤"과 같은 UI에 매우 적합합니다.

<!-- Unlike offset based pagination, which includes a page number in the query string of the URLs generated by the paginator, cursor based pagination places a "cursor" string in the query string. The cursor is an encoded string containing the location that the next paginated query should start paginating and the direction that it should paginate: -->
오프셋 기반 페이지네이션과 달리, 커서 기반 페이지네이션에서는 페이지네이터가 생성하는 URL 쿼리스트링에 "페이지 번호" 대신 "커서"라는 문자열이 들어갑니다. 이 커서란 다음 페이지네이션이 어디서부터 시작하면 될지, 또 어느 방향으로 페이지네이션해야 할지를 담고 있는 인코딩된 문자열입니다.

```nothing
http://localhost/users?cursor=eyJpZCI6MTUsIl9wb2ludHNUb05leHRJdGVtcyI6dHJ1ZX0
```

<!-- You may create a cursor based paginator instance via the `cursorPaginate` method offered by the query builder. This method returns an instance of `Illuminate\Pagination\CursorPaginator`: -->
쿼리 빌더에서 `cursorPaginate` 메서드를 사용해 커서 기반 페이지네이터 인스턴스를 생성할 수 있습니다. 이 메서드는 `Illuminate\Pagination\CursorPaginator` 인스턴스를 반환합니다.

```
$users = DB::table('users')->orderBy('id')->cursorPaginate(15);
```

<!-- Once you have retrieved a cursor paginator instance, you may [display the pagination results](#displaying-pagination-results) as you typically would when using the `paginate` and `simplePaginate` methods. For more information on the instance methods offered by the cursor paginator, please consult the [cursor paginator instance method documentation](#cursor-paginator-instance-methods). -->
커서 페이지네이터 인스턴스를 얻었다면, `paginate` 및 `simplePaginate`와 마찬가지로 [display the pagination results](#displaying-pagination-results) 방식을 사용할 수 있습니다. 커서 페이지네이터의 더 많은 인스턴스 메서드들은 [cursor paginator instance method documentation](#cursor-paginator-instance-methods)에서 추가로 확인할 수 있습니다.

> [!WARNING]
> 커서 페이지네이션을 제대로 동작시키려면 쿼리에 반드시 "order by" 절이 포함되어야 합니다.

<a name="cursor-vs-offset-pagination"></a>
<!-- #### Cursor vs. Offset Pagination -->
#### Cursor vs. Offset Pagination

<!-- To illustrate the differences between offset pagination and cursor pagination, let's examine some example SQL queries. Both of the following queries will both display the "second page" of results for a `users` table ordered by `id`: -->
오프셋 페이지네이션과 커서 페이지네이션의 차이를 이해하기 위해, 예시 SQL 쿼리를 살펴보겠습니다. 아래 두 쿼리는 모두 `users` 테이블을 `id`로 정렬한 뒤 "두 번째 페이지"의 결과를 보여줍니다.

```sql
# Offset Pagination...
select * from users order by id asc limit 15 offset 15;

# Cursor Pagination...
select * from users where id > 15 order by id asc limit 15;
```

<!-- The cursor pagination query offers the following advantages over offset pagination: -->
커서 페이지네이션 방식은 오프셋 방식에 비해 다음과 같은 장점이 있습니다.

<!--
- For large data-sets, cursor pagination will offer better performance if the "order by" columns are indexed. This is because the "offset" clause scans through all previously matched data.
- For data-sets with frequent writes, offset pagination may skip records or show duplicates if results have been recently added to or deleted from the page a user is currently viewing.
-->
- 데이터셋이 매우 클 경우, "order by" 컬럼에 인덱스가 걸려 있으면 커서 방식이 훨씬 더 뛰어난 성능을 보입니다. 반면 offset 방식은 이전의 모든 데이터를 한 번씩 훑고 넘어가기 때문입니다.
- 데이터가 자주 변경되는 환경(즉, insert 또는 delete가 자주 발생할 때)에서는, offset 페이지네이션은 레코드를 건너뛰거나 중복을 보여줄 수 있습니다.

<!-- However, cursor pagination has the following limitations: -->
하지만, 커서 페이지네이션에도 한계가 있습니다.

<!--
- Like `simplePaginate`, cursor pagination can only be used to display "Next" and "Previous" links and does not support generating links with page numbers.
- It requires that the ordering is based on at least one unique column or a combination of columns that are unique. Columns with `null` values are not supported.
- Query expressions in "order by" clauses are supported only if they are aliased and added to the "select" clause as well.
- Query expressions with parameters are not supported.
-->
- `simplePaginate`처럼 커서 페이지네이션은 "다음" 또는 "이전" 링크만 지원하며, 페이지 번호로 직접 이동하는 링크는 생성할 수 없습니다.
- 정렬을 위해 반드시 하나 이상의 고유 컬럼, 또는 컬럼 조합이 필요합니다. `null` 값이 포함된 컬럼은 지원되지 않습니다.
- "order by" 절에 쿼리 식을 사용하는 경우, 반드시 별칭(alias)이 지정되고 "select" 절에도 그 컬럼이 추가되어야 지원됩니다.
- "order by" 절에 파라미터가 들어가는 쿼리 식은 지원되지 않습니다.

<a name="manually-creating-a-paginator"></a>
<!-- ### Manually Creating A Paginator -->
### Manually Creating A Paginator

<!-- Sometimes you may wish to create a pagination instance manually, passing it an array of items that you already have in memory. You may do so by creating either an `Illuminate\Pagination\Paginator`, `Illuminate\Pagination\LengthAwarePaginator` or `Illuminate\Pagination\CursorPaginator` instance, depending on your needs. -->
어떤 경우에는, 이미 메모리에 배열로 가지고 있는 데이터를 직접 넘겨서 페이지네이션 인스턴스를 수동으로 생성하고 싶을 때가 있습니다. 이런 경우, 필요에 따라 `Illuminate\Pagination\Paginator`, `Illuminate\Pagination\LengthAwarePaginator`, 또는 `Illuminate\Pagination\CursorPaginator` 중 하나의 인스턴스를 직접 생성하면 됩니다.

<!-- The `Paginator` and `CursorPaginator` classes do not need to know the total number of items in the result set; however, because of this, these classes do not have methods for retrieving the index of the last page. The `LengthAwarePaginator` accepts almost the same arguments as the `Paginator`; however, it requires a count of the total number of items in the result set. -->
`Paginator`와 `CursorPaginator` 클래스는 결과 집합의 전체 아이템 수를 알 필요가 없습니다. 대신, 이 클래스들은 마지막 페이지의 인덱스(location)는 구할 수 없습니다. 반면, `LengthAwarePaginator`는 `Paginator`와 거의 동일한 인자를 받지만, 전체 아이템 수를 반드시 인수로 넘겨주어야 합니다.

<!-- In other words, the `Paginator` corresponds to the `simplePaginate` method on the query builder, the `CursorPaginator` corresponds to the `cursorPaginate` method, and the `LengthAwarePaginator` corresponds to the `paginate` method. -->
정리하자면 `Paginator`는 쿼리 빌더의 `simplePaginate`, `CursorPaginator`는 `cursorPaginate`, `LengthAwarePaginator`는 `paginate`와 대응된다고 볼 수 있습니다.

> [!WARNING]
> 페이지네이터 인스턴스를 수동으로 생성할 때는 반드시 페이지네이션 할 배열을 직접 "slice"해서 넘겨주어야 합니다. 만약 정확한 방법을 잘 모르겠다면, PHP의 [array_slice](https://secure.php.net/manual/en/function.array-slice.php) 함수를 참고하세요.

<a name="customizing-pagination-urls"></a>
<!-- ### Customizing Pagination URLs -->
### Customizing Pagination URLs

<!-- By default, links generated by the paginator will match the current request's URI. However, the paginator's `withPath` method allows you to customize the URI used by the paginator when generating links. For example, if you want the paginator to generate links like `http://example.com/admin/users?page=N`, you should pass `/admin/users` to the `withPath` method: -->
기본적으로 페이지네이터가 생성하는 링크는 현재 요청의 URI와 동일하게 맞춰집니다. 하지만 페이지네이터의 `withPath` 메서드를 활용하면, 링크를 생성할 때 사용할 URI를 직접 지정할 수 있습니다. 예를 들어, 페이지네이터가 `http://example.com/admin/users?page=N`과 같은 링크를 만들길 원한다면, `withPath` 메서드에 `/admin/users`를 전달하면 됩니다.

```
use App\Models\User;

Route::get('/users', function () {
    $users = User::paginate(15);

    $users->withPath('/admin/users');

    //
});
```

<a name="appending-query-string-values"></a>
<!-- #### Appending Query String Values -->
#### Appending Query String Values

<!-- You may append to the query string of pagination links using the `appends` method. For example, to append `sort=votes` to each pagination link, you should make the following call to `appends`: -->
페이지네이션 링크의 쿼리스트링 끝에 값을 추가할 때는 `appends` 메서드를 사용합니다. 예를 들어, 모든 페이지네이션 링크에 `sort=votes`를 추가하고 싶다면, 아래와 같이 `appends`를 사용하면 됩니다.

```
use App\Models\User;

Route::get('/users', function () {
    $users = User::paginate(15);

    $users->appends(['sort' => 'votes']);

    //
});
```

<!-- You may use the `withQueryString` method if you would like to append all of the current request's query string values to the pagination links: -->
만약 현재 요청의 모든 쿼리스트링 값을 페이지네이션 링크에 자동으로 추가하고 싶으면, `withQueryString` 메서드를 사용할 수 있습니다.

```
$users = User::paginate(15)->withQueryString();
```

<a name="appending-hash-fragments"></a>
<!-- #### Appending Hash Fragments -->
#### Appending Hash Fragments

<!-- If you need to append a "hash fragment" to URLs generated by the paginator, you may use the `fragment` method. For example, to append `#users` to the end of each pagination link, you should invoke the `fragment` method like so: -->
페이지네이터가 생성하는 각 링크에 "해시 프래그먼트"를 추가해야 할 경우에는 `fragment` 메서드를 사용할 수 있습니다. 예시로, 모든 페이지네이션 링크 끝에 `#users`를 붙이려면 다음과 같이 `fragment` 메서드를 호출합니다.

```
$users = User::paginate(15)->fragment('users');
```

<a name="displaying-pagination-results"></a>
<!-- ## Displaying Pagination Results -->
## Displaying Pagination Results

<!-- When calling the `paginate` method, you will receive an instance of `Illuminate\Pagination\LengthAwarePaginator`, while calling the `simplePaginate` method returns an instance of `Illuminate\Pagination\Paginator`. And, finally, calling the `cursorPaginate` method returns an instance of `Illuminate\Pagination\CursorPaginator`. -->
`paginate` 메서드를 사용하면 `Illuminate\Pagination\LengthAwarePaginator` 인스턴스를, `simplePaginate`는 `Illuminate\Pagination\Paginator` 인스턴스를, 그리고 `cursorPaginate`는 `Illuminate\Pagination\CursorPaginator` 인스턴스를 반환합니다.

<!-- These objects provide several methods that describe the result set. In addition to these helper methods, the paginator instances are iterators and may be looped as an array. So, once you have retrieved the results, you may display the results and render the page links using [Blade](/docs/9.x/blade): -->
이 객체들은 결과셋의 여러가지 정보를 조회하는 다양한 메서드를 제공합니다. 또한 페이지네이터 인스턴스는 반복자(iterator)이기 때문에 배열처럼 반복문으로 순회할 수 있습니다. 결과를 받아온 후에는 [Blade](/docs/9.x/blade)를 사용해 결과를 출력하고 페이지 링크를 렌더링할 수 있습니다.

```blade
<div class="container">
    @foreach ($users as $user)
        {{ $user->name }}
    @endforeach
</div>

{{ $users->links() }}
```

<!-- The `links` method will render the links to the rest of the pages in the result set. Each of these links will already contain the proper `page` query string variable. Remember, the HTML generated by the `links` method is compatible with the [Tailwind CSS framework](https://tailwindcss.com). -->
`links` 메서드는 결과 집합의 나머지 페이지로 이동할 수 있는 링크들을 렌더링합니다. 각각의 링크에는 올바른 `page` 쿼리스트링 변수가 이미 담겨 있습니다. 참고로, `links` 메서드가 만들어내는 HTML은 [Tailwind CSS framework](https://tailwindcss.com)와 호환됩니다.

<a name="adjusting-the-pagination-link-window"></a>
<!-- ### Adjusting The Pagination Link Window -->
### Adjusting The Pagination Link Window

<!-- When the paginator displays pagination links, the current page number is displayed as well as links for the three pages before and after the current page. Using the `onEachSide` method, you may control how many additional links are displayed on each side of the current page within the middle, sliding window of links generated by the paginator: -->
페이지네이터가 페이지 링크를 표시할 때, 현재 페이지 번호와 함께 앞뒤 각각 3개의 추가 링크가 기본적으로 표시됩니다. `onEachSide` 메서드를 사용하면, 현재 페이지 기준으로 양쪽에 몇 개의 추가 링크를 보여줄지 조정할 수 있습니다.

```blade
{{ $users->onEachSide(5)->links() }}
```

<a name="converting-results-to-json"></a>
<!-- ### Converting Results To JSON -->
### Converting Results To JSON

<!-- The Laravel paginator classes implement the `Illuminate\Contracts\Support\Jsonable` Interface contract and expose the `toJson` method, so it's very easy to convert your pagination results to JSON. You may also convert a paginator instance to JSON by returning it from a route or controller action: -->
Laravel의 페이지네이터 클래스들은 `Illuminate\Contracts\Support\Jsonable` 인터페이스를 구현하고 있어, `toJson` 메서드로 쉽게 페이지네이션 결과를 JSON으로 변환할 수 있습니다. 또한, 페이지네이터 인스턴스를 라우트나 컨트롤러에서 반환하게 되면 자동으로 JSON으로 전환됩니다.

```
use App\Models\User;

Route::get('/users', function () {
    return User::paginate();
});
```

<!-- The JSON from the paginator will include meta information such as `total`, `current_page`, `last_page`, and more. The result records are available via the `data` key in the JSON array. Here is an example of the JSON created by returning a paginator instance from a route: -->
페이지네이터가 반환하는 JSON은 `total`, `current_page`, `last_page` 등 메타 정보도 함께 담고 있습니다. 실제 결과 레코드들은 JSON 배열의 `data` 키 아래에 위치합니다. 아래는 라우트에서 페이지네이터 인스턴스를 반환했을 때 생성되는 JSON 예시입니다.

```
{
   "total": 50,
   "per_page": 15,
   "current_page": 1,
   "last_page": 4,
   "first_page_url": "http://laravel.app?page=1",
   "last_page_url": "http://laravel.app?page=4",
   "next_page_url": "http://laravel.app?page=2",
   "prev_page_url": null,
   "path": "http://laravel.app",
   "from": 1,
   "to": 15,
   "data":[
        {
            // Record...
        },
        {
            // Record...
        }
   ]
}
```

<a name="customizing-the-pagination-view"></a>
<!-- ## Customizing The Pagination View -->
## Customizing The Pagination View

<!-- By default, the views rendered to display the pagination links are compatible with the [Tailwind CSS](https://tailwindcss.com) framework. However, if you are not using Tailwind, you are free to define your own views to render these links. When calling the `links` method on a paginator instance, you may pass the view name as the first argument to the method: -->
기본적으로 페이지네이션 링크를 표시하는 뷰는 [Tailwind CSS](https://tailwindcss.com) 프레임워크와 호환되도록 설계되어 있습니다. 하지만 Tailwind를 사용하지 않는 경우, 직접 만든 뷰 파일로 링크를 렌더링하도록 뷰 이름을 지정할 수 있습니다. 페이지네이터 인스턴스의 `links` 메서드에 뷰 이름을 첫 번째 인수로 전달하면 됩니다.

```blade
{{ $paginator->links('view.name') }}

<!-- Passing additional data to the view... -->
{{ $paginator->links('view.name', ['foo' => 'bar']) }}
```

<!-- However, the easiest way to customize the pagination views is by exporting them to your `resources/views/vendor` directory using the `vendor:publish` command: -->
하지만 페이지네이션 뷰를 커스터마이즈하는 가장 쉬운 방법은, `vendor:publish` 명령어로 기본 페이지네이션 뷰 파일을 `resources/views/vendor` 디렉터리 아래로 복사하는 것입니다.

```shell
php artisan vendor:publish --tag=laravel-pagination
```

<!-- This command will place the views in your application's `resources/views/vendor/pagination` directory. The `tailwind.blade.php` file within this directory corresponds to the default pagination view. You may edit this file to modify the pagination HTML. -->
이 명령은 애플리케이션의 `resources/views/vendor/pagination` 디렉터리에 뷰 파일들을 복사합니다. 이 디렉터리의 `tailwind.blade.php` 파일이 기본 페이지네이션 뷰입니다. 이 파일을 원하는 대로 수정해 페이지네이션 HTML을 바꿀 수 있습니다.

<!-- If you would like to designate a different file as the default pagination view, you may invoke the paginator's `defaultView` and `defaultSimpleView` methods within the `boot` method of your `App\Providers\AppServiceProvider` class: -->
기본적으로 사용할 페이지네이션 뷰 파일을 바꾸고 싶다면, `App\Providers\AppServiceProvider` 클래스의 `boot` 메서드에서 페이지네이터의 `defaultView`와 `defaultSimpleView` 메서드를 호출해 지정할 수 있습니다.

```
<?php

namespace App\Providers;

use Illuminate\Pagination\Paginator;
use Illuminate\Support\ServiceProvider;

class AppServiceProvider extends ServiceProvider
{
    /**
     * Bootstrap any application services.
     *
     * @return void
     */
    public function boot()
    {
        Paginator::defaultView('view-name');

        Paginator::defaultSimpleView('view-name');
    }
}
```

<a name="using-bootstrap"></a>
<!-- ### Using Bootstrap -->
### Using Bootstrap

<!-- Laravel includes pagination views built using [Bootstrap CSS](https://getbootstrap.com/). To use these views instead of the default Tailwind views, you may call the paginator's `useBootstrapFour` or `useBootstrapFive` methods within the `boot` method of your `App\Providers\AppServiceProvider` class: -->
Laravel에는 [Bootstrap CSS](https://getbootstrap.com/)를 기반으로 만든 페이지네이션 뷰도 포함되어 있습니다. 기본 Tailwind 뷰 대신 이를 사용하려면, `App\Providers\AppServiceProvider` 클래스의 `boot` 메서드에서 페이지네이터의 `useBootstrapFour` 또는 `useBootstrapFive` 메서드를 호출하면 됩니다.

```
use Illuminate\Pagination\Paginator;

/**
 * Bootstrap any application services.
 *
 * @return void
 */
public function boot()
{
    Paginator::useBootstrapFive();
    Paginator::useBootstrapFour();
}
```

<a name="paginator-instance-methods"></a>
<!-- ## Paginator / LengthAwarePaginator Instance Methods -->
## Paginator / LengthAwarePaginator Instance Methods

<!-- Each paginator instance provides additional pagination information via the following methods: -->
각 페이지네이터 인스턴스는 다음과 같은 메서드들을 통해 추가적인 페이지네이션 정보를 제공합니다.

<!--
Method  |  Description
-------  |  -----------
`$paginator->count()`  |  Get the number of items for the current page.
`$paginator->currentPage()`  |  Get the current page number.
`$paginator->firstItem()`  |  Get the result number of the first item in the results.
`$paginator->getOptions()`  |  Get the paginator options.
`$paginator->getUrlRange($start, $end)`  |  Create a range of pagination URLs.
`$paginator->hasPages()`  |  Determine if there are enough items to split into multiple pages.
`$paginator->hasMorePages()`  |  Determine if there are more items in the data store.
`$paginator->items()`  |  Get the items for the current page.
`$paginator->lastItem()`  |  Get the result number of the last item in the results.
`$paginator->lastPage()`  |  Get the page number of the last available page. (Not available when using `simplePaginate`).
`$paginator->nextPageUrl()`  |  Get the URL for the next page.
`$paginator->onFirstPage()`  |  Determine if the paginator is on the first page.
`$paginator->perPage()`  |  The number of items to be shown per page.
`$paginator->previousPageUrl()`  |  Get the URL for the previous page.
`$paginator->total()`  |  Determine the total number of matching items in the data store. (Not available when using `simplePaginate`).
`$paginator->url($page)`  |  Get the URL for a given page number.
`$paginator->getPageName()`  |  Get the query string variable used to store the page.
`$paginator->setPageName($name)`  |  Set the query string variable used to store the page.
-->
메서드  |  설명
-------  |  -----------
`$paginator->count()`  |  현재 페이지에 포함된 아이템 개수를 반환합니다.
`$paginator->currentPage()`  |  현재 페이지 번호를 반환합니다.
`$paginator->firstItem()`  |  결과셋에서 첫 번째 아이템의 번호(인덱스)를 반환합니다.
`$paginator->getOptions()`  |  페이지네이터의 옵션들을 반환합니다.
`$paginator->getUrlRange($start, $end)`  |  지정한 범위의 페이지에 대한 URL들을 생성합니다.
`$paginator->hasPages()`  |  여러 페이지로 나눠질 만큼 충분한 데이터가 있는지 확인합니다.
`$paginator->hasMorePages()`  |  아직 더 보여줄 수 있는 데이터가 남았는지 확인합니다.
`$paginator->items()`  |  현재 페이지에 포함된 아이템들을 반환합니다.
`$paginator->lastItem()`  |  결과셋에서 마지막 아이템의 번호(인덱스)를 반환합니다.
`$paginator->lastPage()`  |  마지막 페이지의 번호를 반환합니다. (`simplePaginate` 사용 시에는 제공되지 않습니다.)
`$paginator->nextPageUrl()`  |  다음 페이지의 URL을 반환합니다.
`$paginator->onFirstPage()`  |  현재 페이지가 첫 번째 페이지인지 확인합니다.
`$paginator->perPage()`  |  페이지당 표시할 아이템 개수를 반환합니다.
`$paginator->previousPageUrl()`  |  이전 페이지의 URL을 반환합니다.
`$paginator->total()`  |  전체 매칭되는 아이템 수를 반환합니다. (`simplePaginate` 사용 시에는 제공되지 않습니다.)
`$paginator->url($page)`  |  주어진 페이지 번호에 대한 URL을 반환합니다.
`$paginator->getPageName()`  |  페이지 정보를 저장하는 쿼리스트링 변수 이름을 반환합니다.
`$paginator->setPageName($name)`  |  페이지 정보를 저장하는 쿼리스트링 변수 이름을 지정합니다.

<a name="cursor-paginator-instance-methods"></a>
<!-- ## Cursor Paginator Instance Methods -->
## Cursor Paginator Instance Methods

<!-- Each cursor paginator instance provides additional pagination information via the following methods: -->
각 커서 페이지네이터 인스턴스는 다음과 같은 메서드로 추가적인 페이지네이션 정보를 제공합니다.

<!--
Method  |  Description
-------  |  -----------
`$paginator->count()`  |  Get the number of items for the current page.
`$paginator->cursor()`  |  Get the current cursor instance.
`$paginator->getOptions()`  |  Get the paginator options.
`$paginator->hasPages()`  |  Determine if there are enough items to split into multiple pages.
`$paginator->hasMorePages()`  |  Determine if there are more items in the data store.
`$paginator->getCursorName()`  |  Get the query string variable used to store the cursor.
`$paginator->items()`  |  Get the items for the current page.
`$paginator->nextCursor()`  |  Get the cursor instance for the next set of items.
`$paginator->nextPageUrl()`  |  Get the URL for the next page.
`$paginator->onFirstPage()`  |  Determine if the paginator is on the first page.
`$paginator->onLastPage()`  |  Determine if the paginator is on the last page.
`$paginator->perPage()`  |  The number of items to be shown per page.
`$paginator->previousCursor()`  |  Get the cursor instance for the previous set of items.
`$paginator->previousPageUrl()`  |  Get the URL for the previous page.
`$paginator->setCursorName()`  |  Set the query string variable used to store the cursor.
`$paginator->url($cursor)`  |  Get the URL for a given cursor instance.
-->
메서드  |  설명
-------  |  -----------
`$paginator->count()`  |  현재 페이지에 포함된 아이템 개수를 반환합니다.
`$paginator->cursor()`  |  현재 커서 인스턴스를 반환합니다.
`$paginator->getOptions()`  |  페이지네이터의 옵션들을 반환합니다.
`$paginator->hasPages()`  |  여러 페이지로 나눠질 만큼 충분한 데이터가 있는지 확인합니다.
`$paginator->hasMorePages()`  |  아직 더 보여줄 수 있는 데이터가 남았는지 확인합니다.
`$paginator->getCursorName()`  |  커서 정보를 저장하는 쿼리스트링 변수 이름을 반환합니다.
`$paginator->items()`  |  현재 페이지에 포함된 아이템들을 반환합니다.
`$paginator->nextCursor()`  |  다음 데이터 집합의 커서 인스턴스를 반환합니다.
`$paginator->nextPageUrl()`  |  다음 페이지의 URL을 반환합니다.
`$paginator->onFirstPage()`  |  현재 페이지가 첫 번째 페이지인지 확인합니다.
`$paginator->onLastPage()`  |  현재 페이지가 마지막 페이지인지 확인합니다.
`$paginator->perPage()`  |  페이지당 표시할 아이템 개수를 반환합니다.
`$paginator->previousCursor()`  |  이전 데이터 집합의 커서 인스턴스를 반환합니다.
`$paginator->previousPageUrl()`  |  이전 페이지의 URL을 반환합니다.
`$paginator->setCursorName()`  |  커서 정보를 저장하는 쿼리스트링 변수 이름을 지정합니다.
`$paginator->url($cursor)`  |  특정 커서 인스턴스에 대한 URL을 반환합니다.
